--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script type="text/javascript" src="assets/js/quiz.js"></script>  
     <script type="text/javascript" src="assets/js/new.js"></script>  
-    <script type="text/javascript" src="assets/js/questions.js"></script>  
+    <!-- <script type="text/javascript" src="assets/js/questions.js"></script>   -->
 
 
 </body>
