everything including next buttons and score counter functions are working. Its left with the reset button and the styling. Reset button can be set by going step by step on how I want it to work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </span>SCORE: <span class = "userScore">0</span></p>
         </header>
         <main>
-        <div class = "introMessage intro">Want learn some ridiculous historical facts that will blow your mind?<br/>
+        <div class = "introMessage intro">Want to learn some ridiculous historical facts that will blow your mind?<br/>
 
         <button type="button" class="startButton intro">YES!</button>
         </div>
