--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </span>SCORE: <span class = "userScore">0</span></p>
         </header>
         <main>
-        <div class = "introMessage intro">Want to learn some ridiculous historical facts that will blow your mind?<br/>
+        <div class = "introMessage displayedMessage">Want to learn some ridiculous historical facts that will blow your mind?<br/>
 
         <button type="button" class="startButton intro">YES!</button>
         </div>
-        <div class="generatedQuestion"></div>
+        <div class="generatedQuestion displayedMessage"></div>
         </main>
     </div>
 
