--- a/landingPageWireframe.html
+++ b/landingPageWireframe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>World History</title>
+    <title>Landing Page</title>
     <link href="assets/css/main.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
@@ -20,18 +20,19 @@
         </span>SCORE: <span class = "userScore">0</span></p>
         </header>
         <main>
-        <div class = "introMessage displayedMessage">Want to learn some ridiculous historical facts that will blow your mind?<br/>
-
+                <div class = "introMessage displayedMessage">Want to learn some ridiculous historical facts that will blow your mind?<br/>
+        
         <button type="button" class="startButton intro">YES!</button>
         </div>
         <div class="generatedQuestion displayedMessage"></div>
         </main>
     </div>
+    
+
+
 
 
     <script type="text/javascript" src="assets/js/quiz.js"></script>  
-    <script type="text/javascript" src="assets/js/new.js"></script>
-
-
+    <script type="text/javascript" src="assets/js/new.js"></script>  
 </body>
 </html>
